<resources>
    <string name="app_name">Kaizen</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="user_or_email_hint">Usuario/Email</string>
    <string name="user_or_email_text_helper">Digite su nombre de usuario o email</string>
    <string name="password_helper_text">Digite su contraseña de acceso</string>
    <string name="password_hint">Contraseña</string>
    <string name="keep_session_hint">Matener sesión iniciada</string>
    <string name="forgotten_password_text">¿Has olvidado tu contraseña?</string>
    <string name="not_register_text">¿No estas registrado?</string>
    <string name="schedule_menu_item_text">Cronograma</string>
    <string name="clients_menu_item_text">Clientes</string>
    <string name="employees_menu_item_text">Empleados</string>
    <string name="inventory_menu_item_text">Inventario</string>
    <string name="services_menu_item_text">Servicios</string>
    <string name="schedule_client_menu_item_text">Agenda</string>
    <string name="invoices_menu_item_text">Facturas</string>
    <string name="certificates_menu_item_text">Certificados</string>
    <string name="settings_menu_item_text">Configuración</string>
    <string name="work_orders_menu_item_text">Ordenes de trabajo</string>
    <string name="zero_text">0</string>
    <string name="see_more">Ver más</string>
    <string name="last_visited_clients">Últimos clientes visitados</string>
    <string name="activities_applied_today">Activitdades aplicadas hoy</string>
    <string name="generated_invoices">Facturas generadas</string>
    <string name="last_visited_client_item_hour">A las %1$s</string>
    <string name="last_visited_client_default_client_name">Client Name</string>
    <string name="next_activity">Próxima actividad</string>
    <string name="pending_activities">Actividades pendientes</string>
    <string name="applied_activities">Actividades aplicadas</string>
    <string name="service_requests">Solicitudes de servicios</string>
    <string name="client_requests">Solicitudes de clientes</string>
    <string name="today_pending_activities">Actividades pendientes del día</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_schedule_title">Calendario de actividades</string>
    <string name="current_month_default_text">Current month</string>
    <string name="activity_detail_title_text">Actividad N° %1$d</string>
</resources>
